Start create the header for desktop view

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -2,6 +2,7 @@
   "title": "Верстка. Одежда Designed for Fitness для занятий в тренажерном зале"
 })
 <body>
+@@include('../containers/_c-header.html')
 @@include('../containers/_c-slider.html')
 @@include('../containers/_scripts.html')
 
