--- a/src/html/containers/_c-header.html
+++ b/src/html/containers/_c-header.html
@@ -1,5 +1,22 @@
 <div class="c-header">
   <div class="inner">
-    <a href="/"><img src="/"</a>
+    <a href="/" class="c-header__logo"><img src="/app/img/content/logo-white.svg"></a>
+    <nav>
+      <ul class="c-header__navGroup c-header__navGroup--first">
+        <li><a href="">ТОВАРЫ</a></li>
+        <li><a href="">О НАС</a></li>
+        <li><a href="">КЛИЕНТАМ</a></li>
+      </ul>
+      <ul class="c-header__navGroup c-header__navGroup--second">
+        <li><a href="">FAQ</a></li>
+        <li><a href="">БЛОГ</a></li>
+        <li><a href="">КОНТАКТЫ</a></li>
+      </ul>
+    </nav>
+    <ul class="c-header__buttons">
+      <li class="c-header__button c-header__button--search"><span></span></li>
+      <li class="c-header__button c-header__button--liked"><span></span></li>
+      <li class="c-header__button c-header__button--cart"><span></span></li>
+    </ul>
   </div>
 </div>
