Start create the footer

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,6 +4,7 @@
 <body>
 @@include('../containers/_c-header.html')
 @@include('../containers/_c-slider.html')
+@@include('../containers/_c-footer.html')
 @@include('../containers/_scripts.html')
 
 </body>
