Style for footer

--- a/src/html/containers/_c-footer.html
+++ b/src/html/containers/_c-footer.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-25">
           <h3>Контакты</h3> 
-          <p>
+          <p class="c-footer__contacts">
           Украина. Киев.<br>
           Оболонский проспект 1-Б, <br>
             TРЦ «DreamTown»<br>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="c-footer__row">
-      <div class="row">
+      <div class="row flex">
         <div class="col-25">
           <a href="#" class="c-footer__logo"><img src="/app/img/design/logo-white.svg"></a>
         </div>
