Create c-basic for index page

--- a/src/html/containers/_c-header.html
+++ b/src/html/containers/_c-header.html
@@ -1,9 +1,12 @@
-<div class="c-header">
+<div class="c-header @@colorModificator">
   <div class="inner">
-    <a href="/" class="c-header__logo"><img src="/app/img/content/logo-white.svg"></a>
+    <a href="/" class="c-header__logo">
+      <img src="/app/img/design/logo-white.svg">
+      <img src="/app/img/design/logo-dark.svg">
+    </a>
     <nav>
       <ul class="c-header__navGroup c-header__navGroup--first">
-        <li><a href="">ТОВАРЫ</a></li>
+        <li><a href="/products.html">ТОВАРЫ</a></li>
         <li><a href="">О НАС</a></li>
         <li><a href="">КЛИЕНТАМ</a></li>
       </ul>
