--- a/src/html/containers/_c-slider.html
+++ b/src/html/containers/_c-slider.html
@@ -11,7 +11,7 @@
       девушки выглядят сногсшибательно</p>
             <div class="c-top__buttonWrap">
               @@include('_c-button.html', {
-                "openTag": "a href=\"/link\"",
+                "openTag": "a href=\"/products.html\"",
                 "closeTag": "a",
                 "text": "Все товары",
                 "modificators": "c-button--pink"
