--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,6 +4,9 @@
 <body>
 @@include('../containers/_c-header.html')
 @@include('../containers/_c-slider.html')
+@@include('../containers/_c-basic.html')
+@@include('../containers/_c-basic--vertical.html')
+@@include('../containers/_c-basic.html')
 @@include('../containers/_c-footer.html')
 @@include('../containers/_scripts.html')
 
