Complete index page desctop version

--- a/src/html/containers/_c-basic--vertical.html
+++ b/src/html/containers/_c-basic--vertical.html
@@ -3,7 +3,7 @@
     <div class="c-basic__bgText">Pink</div>
     <div class="row c-basic__top">
       <div class="col-50">
-        <div class="c-basic__topImg" style="background-image: url(/app/img/content/top.jpg);"></div>
+        <div class="c-basic__topImg" style="background-image: url(/app/img/content/basic-vertical-1.jpg);"></div>
       </div>
       <div class="col-50">
         <h2>BASIC ORANGE</h2>
@@ -19,15 +19,15 @@
         })
         <div class="c-basic__cards">
           @@include('_c-basicCard.html', {
-            "firstImageUrl" : "/app/img/content/top.jpg",
-            "secondImageUrl" : "/app/img/content/top.jpg",
+            "firstImageUrl" : "/app/img/content/card-1-1.png",
+            "secondImageUrl" : "/app/img/content/card-1-2.png",
             "name" : "Dark Night",
             "price" : "1200",
             "link" : "/productOne.html"
           })
           @@include('_c-basicCard.html', {
-            "firstImageUrl" : "/app/img/content/top.jpg",
-            "secondImageUrl" : "/app/img/content/top.jpg",
+            "firstImageUrl" : "/app/img/content/card-1-1.png",
+            "secondImageUrl" : "/app/img/content/card-1-2.png",
             "name" : "Dark Night",
             "price" : "1200",
             "link" : "/productOne.html"
