--- a/src/html/containers/_c-basic.html
+++ b/src/html/containers/_c-basic.html
@@ -16,27 +16,27 @@
         })
       </div>
       <div class="col-66">
-        <div class="c-basic__topImg" style="background-image: url(/app/img/content/top.jpg);"></div>
+        <div class="c-basic__topImg" style="background-image: url(/app/img/content/basic-1.jpg);"></div>
       </div>  
     </div> 
     <div class="c-basic__cards">
       @@include('_c-basicCard.html', {
-        "firstImageUrl" : "/app/img/content/top.jpg",
-        "secondImageUrl" : "/app/img/content/top.jpg",
+        "firstImageUrl" : "/app/img/content/card-1-1.png",
+        "secondImageUrl" : "/app/img/content/card-1-2.png",
         "name" : "Dark Night",
         "price" : "1200",
         "link" : "/productOne.html"
       })
       @@include('_c-basicCard.html', {
-        "firstImageUrl" : "/app/img/content/top.jpg",
-        "secondImageUrl" : "/app/img/content/top.jpg",
+        "firstImageUrl" : "/app/img/content/card-1-1.png",
+        "secondImageUrl" : "/app/img/content/card-1-2.png",
         "name" : "Dark Night",
         "price" : "1200",
         "link" : "/productOne.html"
       })
       @@include('_c-basicCard.html', {
-        "firstImageUrl" : "/app/img/content/top.jpg",
-        "secondImageUrl" : "/app/img/content/top.jpg",
+        "firstImageUrl" : "/app/img/content/card-1-1.png",
+        "secondImageUrl" : "/app/img/content/card-1-2.png",
         "name" : "Dark Night",
         "price" : "1200",
         "link" : "/productOne.html"
