Add extendedNav markup and styles

--- a/src/html/containers/_c-header.html
+++ b/src/html/containers/_c-header.html
@@ -6,7 +6,7 @@
     </a>
     <nav>
       <ul class="c-header__navGroup c-header__navGroup--first">
-        <li><a href="/products.html">ТОВАРЫ</a></li>
+        <li class="c-header__navItemExtended"><span onmouseover="overExtendedItem()" onmouseout="outExtendedItem()"><a href="/products.html">ТОВАРЫ</a></span></li>
         <li><a href="">О НАС</a></li>
         <li><a href="">КЛИЕНТАМ</a></li>
       </ul>
