--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -3,6 +3,7 @@
 })
 <body>
 @@include('../containers/_c-header.html')
+@@include('../containers/_c-extendedNav.html')
 @@include('../containers/_c-slider.html')
 @@include('../containers/_c-basic.html')
 @@include('../containers/_c-basic--vertical.html')
