--- a/src/html/containers/_c-slider.html
+++ b/src/html/containers/_c-slider.html
@@ -24,7 +24,7 @@
     </div>
     <div class="c-slider__item">
 
-      <div class="c-top" style="background-image: url('/app/img/content/top-2.jpg')">
+      <div class="c-top c-top--masked" style="background-image: url('/app/img/content/top-2.jpg')">
         <div class="inner">
           <div class="c-top__content">
             <h2>Украинский производитель спортивной одежды
@@ -46,7 +46,7 @@
     </div>
     <div class="c-slider__item">
 
-      <div class="c-top" style="background-image: url('/app/img/content/top-3.jpg')">
+      <div class="c-top c-top--masked" style="background-image: url('/app/img/content/top-3.jpg')">
         <div class="inner">
           <div class="c-top__content">
             <h2>Второй слайд
