--- a/src/html/pages/products.html
+++ b/src/html/pages/products.html
@@ -5,6 +5,7 @@
   @@include('../containers/_c-header.html', {
     "colorModificator" : "c-header--white"
   })
+@@include('../containers/_c-extendedNav.html')
 @@include('../containers/_c-footer.html')
 @@include('../containers/_scripts.html')
 
