Complete index page

--- a/src/html/containers/_c-basic.html
+++ b/src/html/containers/_c-basic.html
@@ -1,4 +1,4 @@
-<div class="c-basic">
+<div class="c-basic @@classes">
   <div class="inner">
     <div class="c-basic__bgText">Orange</div>
     <div class="row c-basic__top">
