--- a/src/html/containers/_scripts.html
+++ b/src/html/containers/_scripts.html
@@ -1,4 +1,1 @@
-<script src="app/js/jquery.min.js"></script>
-<script src="app/js/underscore-min.js"></script>
-<script src="app/js/slick.js"></script>
-<script src="app/js/app.js"></script>
+<script src="app/js/main.js"></script>
