--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -5,9 +5,13 @@
 @@include('../containers/_c-header.html')
 @@include('../containers/_c-extendedNav.html')
 @@include('../containers/_c-slider.html')
-@@include('../containers/_c-basic.html')
+@@include('../containers/_c-basic.html', {
+  "classes" : "c-basic--first"
+})
 @@include('../containers/_c-basic--vertical.html')
-@@include('../containers/_c-basic.html')
+@@include('../containers/_c-basic.html', {
+  "classes" : "c-basic--last"
+})
 @@include('../containers/_c-footer.html')
 @@include('../containers/_scripts.html')
 
