--- a/src/html/pages/products.html
+++ b/src/html/pages/products.html
@@ -2,10 +2,11 @@
   "title": "Верстка. Товары"
 })
 <body>
-  @@include('../containers/_c-header.html', {
-    "colorModificator" : "c-header--white"
-  })
+@@include('../containers/_c-header.html', {
+  "colorModificator" : "c-header--white"
+})
 @@include('../containers/_c-extendedNav.html')
+@@include('../containers/_c-containerWithSidenav.html')
 @@include('../containers/_c-footer.html')
 @@include('../containers/_scripts.html')
 
